clusters/mallard/kube/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    hajimari.io/enable: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
